--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Контакты | Репетитор Маркелов А.В.</title>
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/interface/favicon.ico">
 </head>
 <body>
 
@@ -14,12 +14,15 @@
   <nav class="header">
     <span class="logo">👨‍🏫 РЕПЕТИТОР — МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
     <ul>
+
       <!-- <li><a href="index.html">🏠 ГЛАВНАЯ</a></li>
       <li><a href="reviews.html">⭐ ОТЗЫВЫ</a></li>
       <li><a href="#top">📞 КОНТАКТЫ</a></li> -->
+
       <li><a href="https://vesselchuck.github.io">🏠 ГЛАВНАЯ</a></li>
       <li><a href="https://vesselchuck.github.io/reviews">⭐ ОТЗЫВЫ</a></li>
       <li><a href="#top">📞 КОНТАКТЫ</a></li>
+
     </ul>
   </nav>
 
@@ -30,7 +33,7 @@
       <!-- Review -->
       <div class="card contact-card flex">
         <div class="card-image">
-            <img src="assets/gb-flag.webp" alt="">
+            <img src="assets/gb-flag.webp" alt="Flag of Great Britain" title="Флаг Великобритании «Юнион Джек»">
         </div>
         <div class="card-body">
 
