--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Репетитор Маркелов А.В.</title>
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/interface/favicon.ico">
 </head>
 <body>
 
@@ -14,12 +14,15 @@
   <nav class="header">
     <span class="logo">👨‍🏫 РЕПЕТИТОР — МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
     <ul>
+
       <!-- <li><a href="#top">🏠 ГЛАВНАЯ</a></li>
       <li><a href="reviews.html">⭐ ОТЗЫВЫ</a></li>
       <li><a href="contacts.html">📞 КОНТАКТЫ</a></li> -->
+
       <li><a href="#top">🏠 ГЛАВНАЯ</a></li>
       <li><a href="https://vesselchuck.github.io/reviews">⭐ ОТЗЫВЫ</a></li>
       <li><a href="https://vesselchuck.github.io/contacts">📞 КОНТАКТЫ</a></li>
+
     </ul>
   </nav>
 
@@ -43,7 +46,7 @@
 
             <p class="two">Я имею пятилетний опыт обучения взрослых, подростков и детей, потому могу гарантировать хорошие показатели. Всегда работаю на результат, моя задача не <em>«позаниматься часок»</em>, а научить пользоваться языком и понимать его. Обучающиеся у меня начинают безошибочно изъясняться и понимать изучаемый язык в путешествиях, при общении с клиентами, некоторые даже с успехом стажируются в заграничных компаниях.</p>
 
-            <p class="three">Ранее трудился в <a href="https://pers-school.ru/" target="_blank">Учебном центре «Перспектива»</a> и <a href="https://dzersch5.edumsko.ru/" target="_blank"><abbr title="Муниципальное бюджетное общеобразовательное учреждение">МБОУ</abbr> «Гимназии №5»</a> Московской области, г. Дзержинский. На текущий момент занимаюсь личной практикой. Стремлюсь отслеживать современные международные тенденции преподавания, системно повышаю свою квалификацию посещая вебинары, конференции, курсы и семинары.</p>
+            <p class="three">Ранее трудился в <a href="https://pers-school.ru/" target="_blank">Учебном центре <em>«Перспектива»</em></a> и <a href="https://dzersch5.edumsko.ru/" target="_blank"><abbr title="Муниципальное бюджетное общеобразовательное учреждение">МБОУ</abbr> <em>«Гимназии №5»</em></a> Московской области, г. Дзержинский. На текущий момент занимаюсь личной практикой. Стремлюсь отслеживать современные международные тенденции преподавания, системно повышаю свою квалификацию посещая различные вебинары, конференции, курсы и семинары.</p>
 
             <p class="four">Использую актуальные <abbr title="Учебно-методический комплекс"><strong>УМК</strong></abbr> издательств <a href="https://global.oup.com/" target="_blank">Oxford</a>, <a href="https://www.cambridge.org/" target="_blank">Cambridge</a>, <a href="http://www.pearsonlongman.com/" target="_blank">Longman</a>, <a href="http://macmillan.com/" target="_blank">Macmillan</a> и собственные наработки. Проявляю внимание к целям и задачам учеников. Пытаюсь понять каждого, дабы выявить сильные и слабые стороны. На уроке стараюсь создавать продуктивную обстановку, предлагаю разнообразные активности, объясняю как ранее пройденный, так и новый материал.</p>
 
