--- a/reviews.html
+++ b/reviews.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Отзывы | Репетитор Маркелов А.В.</title>
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/interface/favicon.ico">
 </head>
 <body>
 
@@ -14,12 +14,15 @@
   <nav class="header">
     <span class="logo">👨‍🏫 РЕПЕТИТОР — МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
     <ul>
+
       <!-- <li><a href="index.html">🏠 ГЛАВНАЯ</a></li>
       <li><a href="#top">⭐ ОТЗЫВЫ</a></li>
       <li><a href="contacts.html">📞 КОНТАКТЫ</a></li> -->
+
       <li><a href="https://vesselchuck.github.io">🏠 ГЛАВНАЯ</a></li>
       <li><a href="#top">⭐ ОТЗЫВЫ</a></li>
       <li><a href="https://vesselchuck.github.io/contacts">📞 КОНТАКТЫ</a></li>
+      
     </ul>
   </nav>
 
@@ -34,7 +37,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/mariya.webp" alt="">
+              <img class="avatar" src="assets/avatars/mariya.webp" alt="Фотография молодой девушки" title="Фотография ученицы">
             </figure>
             <h2 class="title">Мария Егорова</h2>
           </div>
@@ -50,7 +53,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/ilja.webp" alt="">
+              <img class="avatar" src="assets/avatars/ilja.webp" alt="Фотография молодого парня" title="Фотография ученика">
             </figure>
             <h2 class="title">Илья Чапчахов</h2>
           </div>
@@ -66,7 +69,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/elena-2.webp" alt="">
+              <img class="avatar" src="assets/avatars/elena-2.webp" alt="Фотография женщины средних лет" title="Фотография мамы ученицы">
             </figure>
             <h2 class="title">Елена Терехова</h2>
           </div>
@@ -82,7 +85,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/vladimir.webp" alt="">
+              <img class="avatar" src="assets/avatars/vladimir.webp" alt="Фотография молодого парня" title="Фотография ученика">
             </figure>
             <h2 class="title">Владимир Воробьёв</h2>
           </div>
@@ -98,7 +101,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/liana.webp" alt="">
+              <img class="avatar" src="assets/avatars/liana.webp" alt="Фотография молодой девушки" title="Фотография ученицы">
             </figure>
             <h2 class="title">Лиана Романова</h2>
           </div>
@@ -114,7 +117,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/alexander-2.webp" alt="">
+              <img class="avatar" src="assets/avatars/alexander-2.webp" alt="Фотография молодого парня" title="Фотография ученика">
             </figure>
             <h2 class="title">Александр Дегтярёв</h2>
           </div>
@@ -130,7 +133,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/evgeniya.webp" alt="">
+              <img class="avatar" src="assets/avatars/evgeniya.webp" alt="Фотография женщины средних лет" title="Фотография мамы ученицы">
             </figure>
             <h2 class="title">Евгения Жук</h2>
           </div>
@@ -146,7 +149,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/luka.webp" alt="">
+              <img class="avatar" src="assets/avatars/luka.webp" alt="Фотография мужчины средних лет" title="Фотография папы ученика">
             </figure>
             <h2 class="title">Лука Балашов</h2>
           </div>
@@ -162,7 +165,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/nadya.webp" alt="">
+              <img class="avatar" src="assets/avatars/nadya.webp" alt="Фотография молодой девушки" title="Фотография ученицы">
             </figure>
             <h2 class="title">Надя Астахова</h2>
           </div>
@@ -178,7 +181,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/natalia.webp" alt="">
+              <img class="avatar" src="assets/avatars/natalia.webp" alt="Фотография молодой девушки" title="Фотография ученицы">
             </figure>
             <h2 class="title">Наталья Смирнова</h2>
           </div>
@@ -194,7 +197,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/julia.webp" alt="">
+              <img class="avatar" src="assets/avatars/julia.webp" alt="Фотография женщины средних лет" title="Фотография ученицы">
             </figure>
             <h2 class="title">Юлия Лебедева</h2>
           </div>
@@ -212,7 +215,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/alina.webp" alt="">
+              <img class="avatar" src="assets/avatars/alina.webp" alt="Фотография женщины средних лет" title="Фотография мамы ученика">
             </figure>
             <h2 class="title">Алина Суханова</h2>
           </div>
@@ -228,7 +231,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/olga.webp" alt="">
+              <img class="avatar" src="assets/avatars/olga.webp" alt="Фотография женщины средних лет" title="Фотография мамы ученика">
             </figure>
             <h2 class="title">Ольга Левицкая</h2>
           </div>
@@ -244,7 +247,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/nikolay.webp" alt="">
+              <img class="avatar" src="assets/avatars/nikolay.webp" alt="Фотография молодого парня" title="Фотография ученика">
             </figure>
             <h2 class="title">Николай Спиридонов</h2>
           </div>
@@ -260,7 +263,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/julia-2.webp" alt="">
+              <img class="avatar" src="assets/avatars/julia-2.webp" alt="Фотография молодой девушки" title="Фотография ученицы">
             </figure>
             <h2 class="title">Юлия Волкова</h2>
           </div>
@@ -276,7 +279,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/anna.webp" alt="">
+              <img class="avatar" src="assets/avatars/anna.webp" alt="Фотография женщины средних лет" title="Фотография мамы ученика">
             </figure>
             <h2 class="title">Анна Фёдоровна</h2>
           </div>
@@ -292,7 +295,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/tala.webp" alt="">
+              <img class="avatar" src="assets/avatars/tala.webp" alt="Фотография женщины средних лет" title="Фотография мамы ученика">
             </figure>
             <h2 class="title">Тала Демидова</h2>
           </div>
@@ -308,7 +311,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/alexander.webp" alt="">
+              <img class="avatar" src="assets/avatars/alexander.webp" alt="Фотография мужчины средних лет" title="Фотография ученика">
             </figure>
             <h2 class="title">Александр Хавронов</h2>
           </div>
@@ -324,7 +327,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/varvara.webp" alt="">
+              <img class="avatar" src="assets/avatars/varvara.webp" alt="Фотография женщины средних лет" title="Фотография мамы ученика">
             </figure>
             <h2 class="title">Белоусова Варвара</h2>
           </div>
@@ -340,7 +343,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/ela.webp" alt="">
+              <img class="avatar" src="assets/avatars/ela.webp" alt="Фотография женщины средних лет" title="Фотография мамы ученика">
             </figure>
             <h2 class="title">Эля Гилязова</h2>
           </div>
@@ -356,7 +359,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/bogdan.webp" alt="">
+              <img class="avatar" src="assets/avatars/bogdan.webp" alt="Фотография молодого парня" title="Фотография ученика">
             </figure>
             <h2 class="title">Богдан Морозов</h2>
           </div>
@@ -372,7 +375,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/tatyana.webp" alt="">
+              <img class="avatar" src="assets/avatars/tatyana.webp" alt="Фотография женщины средних лет" title="Фотография мамы ученика">
             </figure>
             <h2 class="title">Татьяна Прохорова</h2>
           </div>
@@ -388,7 +391,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/madina.webp" alt="">
+              <img class="avatar" src="assets/avatars/madina.webp" alt="Фотография женщины средних лет" title="Фотография мамы ученика">
             </figure>
             <h2 class="title">Мадина Валиева</h2>
           </div>
@@ -404,7 +407,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/nikita.webp" alt="">
+              <img class="avatar" src="assets/avatars/nikita.webp" alt="Фотография молодого парня" title="Фотография ученика">
             </figure>
             <h2 class="title">Никита Герасимов</h2>
           </div>
@@ -420,7 +423,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/anton.webp" alt="">
+              <img class="avatar" src="assets/avatars/anton.webp" alt="Фотография молодого парня" title="Фотография ученика">
             </figure>
             <h2 class="title">Антон Селиванов</h2>
           </div>
@@ -436,12 +439,12 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/maxim.webp" alt="">
+              <img class="avatar" src="assets/avatars/maxim.webp" alt="Фотография мужчины средних лет" title="Фотография ученика">
             </figure>
             <h2 class="title">Максим Голубев</h2>
           </div>
           <blockquote class="text">
-            <p>Обратился по рекомендации друга. Получил именно то что хотел — корректировку грамматики. Несмотря на мой многолетний опыт общения оставались пробелы! Благодарен Арсению и рекомендую его в качестве достойного преподавателя!</p>
+            <p>Серьезный индивидуальный подход к обучающемся, отличное проф. знание предмета, но при этом очень доброжелательное и легкое общение делают обучение интересным настолько, что хочется использовать язык в повседневной жизни). Отличный преподаватель с авторским подходом, рекомендую.</p>
           </blockquote>
           <h4 class="date">12 июня 2022</h4>
         </div>
@@ -452,7 +455,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/yaroslav.webp" alt="">
+              <img class="avatar" src="assets/avatars/yaroslav.webp" alt="Фотография молодого парня" title="Фотография ученика">
             </figure>
             <h2 class="title">Ярослав Счастливый</h2>
           </div>
@@ -468,7 +471,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/klavdia.webp" alt="">
+              <img class="avatar" src="assets/avatars/klavdia.webp" alt="Фотография женщины средних лет" title="Фотография ученицы">
             </figure>
             <h2 class="title">Клавдия Уткина</h2>
           </div>
@@ -484,7 +487,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/elena-3.webp" alt="">
+              <img class="avatar" src="assets/avatars/elena-3.webp" alt="Фотография женщины средних лет" title="Фотография ученицы">
             </figure>
             <h2 class="title">Елена Исаева</h2>
           </div>
@@ -500,7 +503,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/diana.webp" alt="">
+              <img class="avatar" src="assets/avatars/diana.webp" alt="Фотография молодой девушки" title="Фотография ученицы">
             </figure>
             <h2 class="title">Диана Фомичёва</h2>
           </div>
@@ -516,7 +519,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/sergey.webp" alt="">
+              <img class="avatar" src="assets/avatars/sergey.webp" alt="Фотография молодого парня" title="Фотография ученика">
             </figure>
             <h2 class="title">Сергей Иванов</h2>
           </div>
@@ -532,7 +535,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/mariya-2.webp" alt="">
+              <img class="avatar" src="assets/avatars/mariya-2.webp" alt="Фотография женщины средних лет" title="Фотография ученицы">
             </figure>
             <h2 class="title">Мария Воронина</h2>
           </div>
@@ -548,7 +551,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/pavel.webp" alt="">
+              <img class="avatar" src="assets/avatars/pavel.webp" alt="Фотография молодого парня" title="Фотография ученика">
             </figure>
             <h2 class="title">Павел Лапин</h2>
           </div>
@@ -564,7 +567,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/ksenia.webp" alt="">
+              <img class="avatar" src="assets/avatars/ksenia.webp" alt="Фотография женщины средних лет" title="Фотография мамы ученицы">
             </figure>
             <h2 class="title">Ксения Путинцева</h2>
           </div>
@@ -580,7 +583,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/azat.webp" alt="">
+              <img class="avatar" src="assets/avatars/azat.webp" alt="Фотография молодого парня" title="Фотография ученика">
             </figure>
             <h2 class="title">Азат Батыршин</h2>
           </div>
@@ -596,7 +599,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/nadezhda.webp" alt="">
+              <img class="avatar" src="assets/avatars/nadezhda.webp" alt="Фотография женщины средних лет" title="Фотография мамы ученика">
             </figure>
             <h2 class="title">Надежда Томская</h2>
           </div>
@@ -612,7 +615,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/svetlana.webp" alt="">
+              <img class="avatar" src="assets/avatars/svetlana.webp" alt="Фотография женщины средних лет" title="Фотография мамы ученика">
             </figure>
             <h2 class="title">Светлана Куликова</h2>
           </div>
@@ -628,7 +631,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/elena.webp" alt="">
+              <img class="avatar" src="assets/avatars/elena.webp" alt="Фотография женщины средних лет" title="Фотография мамы ученика">
             </figure>
             <h2 class="title">Елена Шевченко</h2>
           </div>
@@ -644,7 +647,7 @@
         <div class="card-body">
           <div class="author">
             <figure>
-              <img class="avatar" src="assets/avatars/ksenia-2.webp" alt="">
+              <img class="avatar" src="assets/avatars/ksenia-2.webp" alt="Фотография женщины средних лет" title="Фотография мамы ученицы">
             </figure>
             <h2 class="title">Ксения Молокова</h2>
           </div>
@@ -654,6 +657,23 @@
           <h4 class="date">31 октября 2022</h4>
         </div>
       </div>
+
+      <!-- Review №40 -->
+      <div class="card review-card">
+        <div class="card-body">
+          <div class="author">
+            <figure>
+              <img class="avatar" src="assets/avatars/elena-4.webp" alt="Фотография женщины средних лет" title="Фотография мамы ученика">
+            </figure>
+            <h2 class="title">Елена Акшонова</h2>
+          </div>
+          <blockquote class="text">
+            <p>Арсений, очень ответственный и терпеливый преподаватель, настроен на положительный результат. Дружелюбный подход к ребёнку, понятно и спокойно объясняет материал. Всегда выходит на связь с родителями, приятный в общении. Сыну очень нравится и мы довольны обучением с таким репетитором.</p>
+          </blockquote>
+          <h4 class="date">1 ноября 2022</h4>
+        </div>
+      </div>
+
     </div>
   </section>
 </body>
