--- a/contacts.html
+++ b/contacts.html
@@ -15,13 +15,13 @@
     <span class="logo">👨‍🏫 РЕПЕТИТОР — МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
     <ul>
 
-      <!-- <li><a href="index.html">🏠 ГЛАВНАЯ</a></li>
+      <li><a href="index.html">🏠 ГЛАВНАЯ</a></li>
       <li><a href="reviews.html">⭐ ОТЗЫВЫ</a></li>
-      <li><a href="#top">📞 КОНТАКТЫ</a></li> -->
-
-      <li><a href="https://vesselchuck.github.io">🏠 ГЛАВНАЯ</a></li>
-      <li><a href="https://vesselchuck.github.io/reviews">⭐ ОТЗЫВЫ</a></li>
       <li><a href="#top">📞 КОНТАКТЫ</a></li>
+
+      <!-- <li><a href="https://vesselchuck.github.io">🏠 ГЛАВНАЯ</a></li>
+      <li><a href="https://vesselchuck.github.io/reviews">⭐ ОТЗЫВЫ</a></li>
+      <li><a href="#top">📞 КОНТАКТЫ</a></li> -->
 
     </ul>
   </nav>
@@ -33,7 +33,7 @@
       <!-- Review -->
       <div class="card contact-card flex">
         <div class="card-image">
-            <img src="assets/gb-flag.webp" alt="Flag of Great Britain" title="Флаг Великобритании «Юнион Джек»">
+            <img src="assets/gb-flag.webp" alt="Флаг Великобритании «Юнион Джек»" title="Флаг Великобритании «Юнион Джек»">
         </div>
         <div class="card-body">
 
