--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="card-body">
           <div class="text">
 
-            <p class="one">Являюсь квалифицированным бакалавром лингвистики, профиля теория и методика преподавания иностранных языков и культур. Мой уровень знаний английского языка <abbr title="Пятый уровень, в повседневной речи называется «продвинутым»"><strong>C1 (Advanced)</strong></abbr>, помогу:</p>
+            <p class="one">Являюсь квалифицированным бакалавром лингвистики, профиля теория и методика преподавания иностранных языков и культур. Мой уровень знаний английского языка <abbr title="Шестой и последний уровень, в повседневной речи называется «билингвальным»"><strong>C2 (Proficient)</strong></abbr>, помогу:</p>
 
             <ul>
               <li>Выполнять домашние задания, контрольные и сдавать зачёты.</li>
