--- a/contacts.html
+++ b/contacts.html
@@ -7,21 +7,52 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Контакты | Репетитор Маркелов А.В.</title>
   <link rel="icon" type="image/x-icon" href="assets/interface/favicon.ico">
+  <script src="https://kit.fontawesome.com/ae090e8de5.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
   <!-- Header -->
   <nav class="header">
-    <span class="logo">👨‍🏫 РЕПЕТИТОР — МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
+    <span class="logo">РЕПЕТИТОР — МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
     <ul>
 
-      <li><a href="index.html">🏠 ГЛАВНАЯ</a></li>
-      <li><a href="reviews.html">⭐ ОТЗЫВЫ</a></li>
-      <li><a href="#top">📞 КОНТАКТЫ</a></li>
+      <!-- <li>
+        <a href="index.html">
+          <i class="fa-solid fa-house-user"></i>
+          <span>ГЛАВНАЯ</span>
+        </a>
+      </li>
+      <li>
+        <a href="reviews.html">
+          <i class="fa-solid fa-star"></i>
+          <span>ОТЗЫВЫ</span>
+        </a>
+      </li>
+      <li>
+        <a href="#top">
+          <i class="fa-solid fa-phone"></i>
+          <span>КОНТАКТЫ</span>
+        </a>
+      </li> -->
 
-      <!-- <li><a href="https://vesselchuck.github.io">🏠 ГЛАВНАЯ</a></li>
-      <li><a href="https://vesselchuck.github.io/reviews">⭐ ОТЗЫВЫ</a></li>
-      <li><a href="#top">📞 КОНТАКТЫ</a></li> -->
+      <li>
+        <a href="https://vesselchuck.github.io">
+          <i class="fa-solid fa-house-user"></i>
+          <span>ГЛАВНАЯ</span>
+        </a>
+      </li>
+      <li>
+        <a href="https://vesselchuck.github.io/reviews">
+          <i class="fa-solid fa-star"></i>
+          <span>ОТЗЫВЫ</span>
+        </a>
+      </li>
+      <li>
+        <a href="#top">
+          <i class="fa-solid fa-phone"></i>
+          <span>КОНТАКТЫ</span>
+        </a>
+      </li>
 
     </ul>
   </nav>
@@ -45,14 +76,20 @@
 
           <div class="h-card vcard flex">
             <div class="phone">
-              <h3 class="title">📞 Телефон</h3>
+              <h3 class="title">
+                <i class="fa-solid fa-phone"></i>
+                <span>Телефон</span>
+              </h3>
               <div class="text">
                 <a class="p-tel" href="tel:+79969760702">+7 996 976-07-02</a>
               </div>
             </div>
 
             <div>
-              <h3 class="title">📧 Электронная почта</h3>
+              <h3 class="title">
+                <i class="fa-solid fa-at"></i>
+                <span>Электронная почта</span>
+              </h3>
               <div class="text">
                 <a class="u-email" href="mailto:vesselchuck.prime@gmail.com">vesselchuck.prime@gmail.com</a>
               </div>
@@ -60,7 +97,10 @@
           </div>
 
           <div class="work-time">
-            <h3 class="title">🕘 Рабочие часы</h3>
+            <h3 class="title">
+              <i class="fa-solid fa-clock"></i>
+              <span>Рабочие часы</span>
+            </h3>
             <div class="text">
               <p>Провожу занятия, в основном, с <strong>14:00</strong> и до <strong>21:00</strong> по московскому времени. Желательно, связываться со мной до или после этого периода времени, либо ограничится сообщением.</p>
             </div>
