--- a/reviews.html
+++ b/reviews.html
@@ -7,22 +7,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Отзывы | Репетитор Маркелов А.В.</title>
   <link rel="icon" type="image/x-icon" href="assets/interface/favicon.ico">
+  <script src="https://kit.fontawesome.com/ae090e8de5.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
   <!-- Header -->
   <nav class="header">
-    <span class="logo">👨‍🏫 РЕПЕТИТОР — МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
+    <span class="logo">РЕПЕТИТОР — МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
     <ul>
 
-      <!-- <li><a href="index.html">🏠 ГЛАВНАЯ</a></li>
-      <li><a href="#top">⭐ ОТЗЫВЫ</a></li>
-      <li><a href="contacts.html">📞 КОНТАКТЫ</a></li> -->
+      <!-- <li>
+        <a href="index.html">
+          <i class="fa-solid fa-house-user"></i>
+          <span>ГЛАВНАЯ</span>
+        </a>
+      </li>
+      <li>
+        <a href="#top">
+          <i class="fa-solid fa-star"></i>
+          <span>ОТЗЫВЫ</span>
+        </a>
+      </li>
+      <li>
+        <a href="contacts.html">
+          <i class="fa-solid fa-phone"></i>
+          <span>КОНТАКТЫ</span>
+        </a>
+      </li> -->
 
-      <li><a href="https://vesselchuck.github.io">🏠 ГЛАВНАЯ</a></li>
-      <li><a href="#top">⭐ ОТЗЫВЫ</a></li>
-      <li><a href="https://vesselchuck.github.io/contacts">📞 КОНТАКТЫ</a></li>
-      
+      <li>
+        <a href="https://vesselchuck.github.io">
+          <i class="fa-solid fa-house-user"></i>
+          <span>ГЛАВНАЯ</span>
+        </a>
+      </li>
+      <li>
+        <a href="#top">
+          <i class="fa-solid fa-star"></i>
+          <span>ОТЗЫВЫ</span>
+        </a>
+      </li>
+      <li>
+        <a href="https://vesselchuck.github.io/contacts">
+          <i class="fa-solid fa-phone"></i>
+          <span>КОНТАКТЫ</span>
+        </a>
+      </li>
+
     </ul>
   </nav>
 
