--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <span class="logo">РЕПЕТИТОР — МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
     <ul>
 
-      <!-- <li>
+      <li>
         <a href="#top">
           <i class="fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
@@ -33,9 +33,9 @@
           <i class="fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
-      </li> -->
+      </li>
 
-      <li>
+      <!-- <li>
         <a href="#top">
           <i class="fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
@@ -52,7 +52,7 @@
           <i class="fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
-      </li>
+      </li> -->
 
     </ul>
   </nav>
@@ -77,7 +77,7 @@
 
             <p class="two">Я имею пятилетний опыт обучения взрослых, подростков и детей, потому могу гарантировать хорошие показатели. Всегда работаю на результат, моя задача не <em>«позаниматься часок»</em>, а научить пользоваться языком и понимать его. Обучающиеся у меня начинают безошибочно изъясняться и понимать изучаемый язык в путешествиях, при общении с клиентами, некоторые даже с успехом стажируются в заграничных компаниях.</p>
 
-            <p class="three">Ранее трудился в <a href="https://pers-school.ru/" target="_blank">Учебном центре <em>«Перспектива»</em></a> и <a href="https://dzersch5.edumsko.ru/" target="_blank"><abbr title="Муниципальное бюджетное общеобразовательное учреждение">МБОУ</abbr> <em>«Гимназии №5»</em></a> Московской области, г. Дзержинский. На текущий момент занимаюсь личной практикой. Стремлюсь отслеживать современные международные тенденции преподавания, системно повышаю свою квалификацию посещая различные вебинары, конференции, курсы и семинары.</p>
+            <p class="three">Ранее трудился в <a href="https://pers-school.ru/" target="_blank">Учебном центре <em>«Перспектива»</em></a> и <a href="https://dzersch5.edumsko.ru/" target="_blank">МБОУ <em>«Гимназии №5»</em></a> Московской области, г. Дзержинский. На текущий момент занимаюсь личной практикой. Стремлюсь отслеживать современные международные тенденции преподавания, системно повышаю свою квалификацию посещая различные вебинары, конференции, курсы и семинары.</p>
 
             <p class="four">Использую актуальные <abbr title="Учебно-методический комплекс"><strong>УМК</strong></abbr> издательств <a href="https://global.oup.com/" target="_blank">Oxford</a>, <a href="https://www.cambridge.org/" target="_blank">Cambridge</a>, <a href="http://www.pearsonlongman.com/" target="_blank">Longman</a>, <a href="http://macmillan.com/" target="_blank">Macmillan</a> и собственные наработки. Проявляю внимание к целям и задачам учеников. Пытаюсь понять каждого, дабы выявить сильные и слабые стороны. На уроке стараюсь создавать продуктивную обстановку, предлагаю разнообразные активности, объясняю как ранее пройденный, так и новый материал.</p>
 
