--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 
   <!-- Header -->
   <nav class="header">
-    <span class="logo">РЕПЕТИТОР — МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
+    <div class="logo">
+      <i class="fa-solid fa-graduation-cap"></i>
+      <span>РЕПЕТИТОР − МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
+    </div>
     <ul>
 
-      <li>
+      <!-- <li>
         <a href="#top">
           <i class="fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
@@ -33,9 +36,9 @@
           <i class="fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
-      </li>
+      </li> -->
 
-      <!-- <li>
+      <li>
         <a href="#top">
           <i class="fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
@@ -52,7 +55,7 @@
           <i class="fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
-      </li> -->
+      </li>
 
     </ul>
   </nav>
