--- a/contacts.html
+++ b/contacts.html
@@ -65,7 +65,7 @@
     <div id="main">
 
       <!-- Review -->
-      <div class="card contact-card flex">
+      <div id="contact-card" class="card flex">
         <div class="card-image">
             <img src="assets/gb-flag.webp" alt="Флаг Великобритании «Юнион Джек»" title="Флаг Великобритании «Юнион Джек»">
         </div>
@@ -77,7 +77,7 @@
             </div>
           </div>
 
-          <div class="h-card vcard flex">
+          <div class="h-card vcard flex wrap">
             <div class="phone">
               <h3 class="title">
                 <i class="fa-solid fa-phone"></i>
@@ -95,6 +95,26 @@
               </h3>
               <div class="text">
                 <a class="u-email" href="mailto:vesselchuck.prime@gmail.com">vesselchuck.prime@gmail.com</a>
+              </div>
+            </div>
+
+            <div class="discord">
+              <h3 class="title">
+                <i class="fa-brands fa-discord"></i>
+                <span>Discord</span>
+              </h3>
+              <div class="text">
+                <a>Vesselchuck#8687</a>
+              </div>
+            </div>
+
+            <div>
+              <h3 class="title">
+                <i class="fa-brands fa-telegram"></i>
+                <span>Telegram</span>
+              </h3>
+              <div class="text">
+                <a href="https://t.me/Vesselchuck" target="_blank">https://t.me/Vesselchuck</a>
               </div>
             </div>
           </div>
