--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet/less" type="text/css" href="styles/style.less" />
+  <script src="scripts/less.min.js" type="text/javascript"></script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,13 +46,13 @@
         </a>
       </li>
       <li>
-        <a href="https://vesselchuck.github.io/reviews">
+        <a href="/reviews">
           <i class="fa-solid fa-star"></i>
           <span>ОТЗЫВЫ</span>
         </a>
       </li>
       <li>
-        <a href="https://vesselchuck.github.io/contacts">
+        <a href="/contacts">
           <i class="fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
@@ -61,33 +62,29 @@
   </nav>
 
   <!-- About Me -->
-  <section id="reviews">
-    <div id="main">
-      <div class="card main-card">
-        <div class="card-body">
-          <div class="text">
+  <section id="main">
+    <div id="about-me-card" class="card">
+      <div class="text">
 
-            <p class="one">Являюсь квалифицированным бакалавром лингвистики, профиля теория и методика преподавания иностранных языков и культур. Мой уровень знаний английского языка <abbr title="Шестой и последний уровень, в повседневной речи называется «билингвальным»"><strong>C2 (Proficient)</strong></abbr>, помогу:</p>
+        <p class="first">Являюсь квалифицированным бакалавром лингвистики, профиля теория и методика преподавания иностранных языков и культур. Мой уровень знаний английского языка <abbr title="Шестой и последний уровень, в повседневной речи называется «билингвальным»"><strong>C2 (Proficient)</strong></abbr>, помогу:</p>
 
-            <ul>
-              <li>Выполнять домашние задания, контрольные и сдавать зачёты.</li>
-              <li>Подготовиться к <abbr title="Всероссийская проверочная работа"><a href="https://ru.wikipedia.org/wiki/%D0%92%D1%81%D0%B5%D1%80%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%B0%D1%8F_%D0%BF%D1%80%D0%BE%D0%B2%D0%B5%D1%80%D0%BE%D1%87%D0%BD%D0%B0%D1%8F_%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%B0" target="_blank">ВПР</a></abbr>, <abbr title="Государственный выпускной экзамен"><a href="https://ru.wikipedia.org/wiki/%D0%93%D0%92%D0%AD" target="_blank">ГВЭ</a></abbr>, <abbr title="Единый государственный экзамен"><a href="https://ru.wikipedia.org/wiki/%D0%95%D0%B4%D0%B8%D0%BD%D1%8B%D0%B9_%D0%B3%D0%BE%D1%81%D1%83%D0%B4%D0%B0%D1%80%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9_%D1%8D%D0%BA%D0%B7%D0%B0%D0%BC%D0%B5%D0%BD" target="_blank">ЕГЭ</a></abbr>, <abbr title="Основной государственный экзамен"><a href="https://ru.wikipedia.org/wiki/%D0%9E%D1%81%D0%BD%D0%BE%D0%B2%D0%BD%D0%BE%D0%B9_%D0%B3%D0%BE%D1%81%D1%83%D0%B4%D0%B0%D1%80%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9_%D1%8D%D0%BA%D0%B7%D0%B0%D0%BC%D0%B5%D0%BD" target="_blank">ОГЭ</a></abbr>, <abbr title="Централизованное тестирование"><a href="https://ru.wikipedia.org/wiki/%D0%A6%D0%B5%D0%BD%D1%82%D1%80%D0%B0%D0%BB%D0%B8%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%BD%D0%BE%D0%B5_%D1%82%D0%B5%D1%81%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5" target="_blank">ЦТ</a></abbr> или иным экзаменам.</li>
-              <li>Преодолеть языковой барьер и расширить словарный запас.</li>
-              <li>Развить навыки по всем видам речевой деятельности.</li>
-              <li>Уверенно говорить и чётко выражать свои мысли.</li>
-              <li>Устранить пробелы в школьной программе, подтянуть знания.</li>
-            </ul>
+        <ul>
+          <li>Выполнять домашние задания, контрольные и сдавать зачёты.</li>
+          <li>Подготовиться к <abbr title="Всероссийская проверочная работа"><a href="https://ru.wikipedia.org/wiki/%D0%92%D1%81%D0%B5%D1%80%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%B0%D1%8F_%D0%BF%D1%80%D0%BE%D0%B2%D0%B5%D1%80%D0%BE%D1%87%D0%BD%D0%B0%D1%8F_%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%B0" target="_blank">ВПР</a></abbr>, <abbr title="Государственный выпускной экзамен"><a href="https://ru.wikipedia.org/wiki/%D0%93%D0%92%D0%AD" target="_blank">ГВЭ</a></abbr>, <abbr title="Единый государственный экзамен"><a href="https://ru.wikipedia.org/wiki/%D0%95%D0%B4%D0%B8%D0%BD%D1%8B%D0%B9_%D0%B3%D0%BE%D1%81%D1%83%D0%B4%D0%B0%D1%80%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9_%D1%8D%D0%BA%D0%B7%D0%B0%D0%BC%D0%B5%D0%BD" target="_blank">ЕГЭ</a></abbr>, <abbr title="Основной государственный экзамен"><a href="https://ru.wikipedia.org/wiki/%D0%9E%D1%81%D0%BD%D0%BE%D0%B2%D0%BD%D0%BE%D0%B9_%D0%B3%D0%BE%D1%81%D1%83%D0%B4%D0%B0%D1%80%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9_%D1%8D%D0%BA%D0%B7%D0%B0%D0%BC%D0%B5%D0%BD" target="_blank">ОГЭ</a></abbr>, <abbr title="Централизованное тестирование"><a href="https://ru.wikipedia.org/wiki/%D0%A6%D0%B5%D0%BD%D1%82%D1%80%D0%B0%D0%BB%D0%B8%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%BD%D0%BE%D0%B5_%D1%82%D0%B5%D1%81%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5" target="_blank">ЦТ</a></abbr> или иным экзаменам.</li>
+          <li>Преодолеть языковой барьер и расширить словарный запас.</li>
+          <li>Развить навыки по всем видам речевой деятельности.</li>
+          <li>Уверенно говорить и чётко выражать свои мысли.</li>
+          <li>Устранить пробелы в школьной программе, подтянуть знания.</li>
+        </ul>
 
-            <p class="two">Я имею пятилетний опыт обучения взрослых, подростков и детей, потому могу гарантировать хорошие показатели. Всегда работаю на результат, моя задача не <em>«позаниматься часок»</em>, а научить пользоваться языком и понимать его. Обучающиеся у меня начинают безошибочно изъясняться и понимать изучаемый язык в путешествиях, при общении с клиентами, некоторые даже с успехом стажируются в заграничных компаниях.</p>
+        <p class="second">Я имею пятилетний опыт обучения взрослых, подростков и детей, потому могу гарантировать хорошие показатели. Всегда работаю на результат, моя задача не <em>«позаниматься часок»</em>, а научить пользоваться языком и понимать его. Обучающиеся у меня начинают безошибочно изъясняться и понимать изучаемый язык в путешествиях, при общении с клиентами, некоторые даже с успехом стажируются в заграничных компаниях.</p>
 
-            <p class="three">Ранее трудился в <a href="https://pers-school.ru/" target="_blank">Учебном центре <em>«Перспектива»</em></a> и <a href="https://dzersch5.edumsko.ru/" target="_blank">МБОУ <em>«Гимназии №5»</em></a> Московской области, г. Дзержинский. На текущий момент занимаюсь личной практикой. Стремлюсь отслеживать современные международные тенденции преподавания, системно повышаю свою квалификацию посещая различные вебинары, конференции, курсы и семинары.</p>
+        <p class="third">Ранее трудился в <a href="https://pers-school.ru/" target="_blank">Учебном центре <em>«Перспектива»</em></a> и <a href="https://dzersch5.edumsko.ru/" target="_blank">МБОУ <em>«Гимназии №5»</em></a> Московской области, г. Дзержинский. На текущий момент занимаюсь личной практикой. Стремлюсь отслеживать современные международные тенденции преподавания, системно повышаю свою квалификацию посещая различные вебинары, конференции, курсы и семинары.</p>
 
-            <p class="four">Использую актуальные <abbr title="Учебно-методический комплекс"><strong>УМК</strong></abbr> издательств <a href="https://global.oup.com/" target="_blank">Oxford</a>, <a href="https://www.cambridge.org/" target="_blank">Cambridge</a>, <a href="http://www.pearsonlongman.com/" target="_blank">Longman</a>, <a href="http://macmillan.com/" target="_blank">Macmillan</a> и собственные наработки. Проявляю внимание к целям и задачам учеников. Пытаюсь понять каждого, дабы выявить сильные и слабые стороны. На уроке стараюсь создавать продуктивную обстановку, предлагаю разнообразные активности, объясняю как ранее пройденный, так и новый материал.</p>
+        <p class="fourth">Использую актуальные <abbr title="Учебно-методический комплекс"><strong>УМК</strong></abbr> издательств <a href="https://global.oup.com/" target="_blank">Oxford</a>, <a href="https://www.cambridge.org/" target="_blank">Cambridge</a>, <a href="http://www.pearsonlongman.com/" target="_blank">Longman</a>, <a href="http://macmillan.com/" target="_blank">Macmillan</a> и собственные наработки. Проявляю внимание к целям и задачам учеников. Пытаюсь понять каждого, дабы выявить сильные и слабые стороны. На уроке стараюсь создавать продуктивную обстановку, предлагаю разнообразные активности, объясняю как ранее пройденный, так и новый материал.</p>
 
-            <p class="five">Работаю дистанционно, в приоритете использование <a href="https://discord.com/" target="_blank">Discord</a> — это наиболее актуальная платформа с хорошим качеством связи и минимальной задержкой, которую удобно использовать и просто настроить. Занятия этого формата так же эффективны, как очные, при этом не требуется тратить время на дорогу и можно заниматься прямо из дома, в комфортных условиях. Требуется лишь вменяемое интернет соединение и микрофон.</p>
+        <p class="fifth">Работаю дистанционно, в приоритете использование <a href="https://discord.com/" target="_blank">Discord</a> — это наиболее актуальная платформа с хорошим качеством связи и минимальной задержкой, которую удобно использовать и просто настроить. Занятия этого формата так же эффективны, как очные, при этом не требуется тратить время на дорогу и можно заниматься прямо из дома, в комфортных условиях. Требуется лишь вменяемое интернет соединение и микрофон.</p>
 
-          </div>
-        </div>
       </div>
     </div>
   </section>
