--- a/reviews.html
+++ b/reviews.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet/less" type="text/css" href="styles/style.less" />
+  <script src="scripts/less.min.js" type="text/javascript"></script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,7 +42,7 @@
       </li> -->
 
       <li>
-        <a href="https://vesselchuck.github.io">
+        <a href="">
           <i class="fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
         </a>
@@ -53,7 +54,7 @@
         </a>
       </li>
       <li>
-        <a href="https://vesselchuck.github.io/contacts">
+        <a href="/contacts">
           <i class="fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
@@ -63,7 +64,7 @@
   </nav>
 
   <!-- Review Columns -->
-  <section id="reviews" class="grid">
+  <section id="main" class="grid">
     <div class="grid-sizer"></div>
     <div class="gutter-sizer"></div>  
 
