--- a/contacts.html
+++ b/contacts.html
@@ -40,13 +40,13 @@
       </li> -->
 
       <li>
-        <a href="">
+        <a href="https://vesselchuck.github.io">
           <i class="fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
         </a>
       </li>
       <li>
-        <a href="/reviews">
+        <a href="https://vesselchuck.github.io/reviews">
           <i class="fa-solid fa-star"></i>
           <span>ОТЗЫВЫ</span>
         </a>
