--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         </a>
       </li>
       <li>
-        <a href="/reviews">
+        <a href="https://vesselchuck.github.io/reviews">
           <i class="fa-solid fa-star"></i>
           <span>ОТЗЫВЫ</span>
         </a>
       </li>
       <li>
-        <a href="/contacts">
+        <a href="https://vesselchuck.github.io/contacts">
           <i class="fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
