--- a/reviews.html
+++ b/reviews.html
@@ -42,7 +42,7 @@
       </li> -->
 
       <li>
-        <a href="">
+        <a href="https://vesselchuck.github.io">
           <i class="fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
         </a>
@@ -54,7 +54,7 @@
         </a>
       </li>
       <li>
-        <a href="/contacts">
+        <a href="https://vesselchuck.github.io/contacts">
           <i class="fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
